wk_taa_taaqa/src/objects/Market_Segment_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SIC_Code_Description__c</fullName>
        <label>SIC Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <externalId>true</externalId>
        <label>SIC Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Market Segment Mapping</label>
</CustomObject>